<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            android:key="username"
            android:title="@string/edit_username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="password"
            android:title="@string/edit_password"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">
        <Preference
            android:title="@string/about_title"
            android:summary="@string/summary_about"/>

        <Preference
            android:title="@string/title_version"
            android:summary="@string/app_version" />

        <Preference
            android:title="@string/help_title"
            android:summary="@string/help_info"/>

    </PreferenceCategory>

</PreferenceScreen>
